Bug 1602326 - Make sure nsIMsgFolder.getOfflineFileStream() returns a stream or an error code. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D107308

--HG--
extra : moz-landing-system : lando